# dofi

./: Cargo.toml  Makefile  README.md  dofi.yaml  rustfmt.toml
dofi/: __main__.py  cli.py  typer_app.py
dofi/api/: github.py  schemas.py
dofi/command/: gitlab.py
dofi/settings/: env.py
dofi/utils/: network.py  parse.py  run_command.py  typehint.py
src/: api.rs  cli.rs  lib.rs  main.rs
src/api/: github.rs  http_client.rs
src/cli/: args.rs  update.rs  utils.rs
src/config/: schemas.rs
tests/: main.rs  test_github.rs  test_github_api.py
