[package]
name = "dofi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.3", features = ["derive", "string", "std", "color", "help"], default-features = false }
config = { version = "0.14.0", default-features = false, features = ["yaml"] }
serde = { version = "1.0.197", features = ["derive"] }
